--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env:uno]
+[env:nano]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
