--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,14 @@ version: '3'
 
 
 services:
-
     choochoo:
-        build:
-            context: .
-            dockerfile: Dockerfile
-        restart: always
-        privileged: true
-        devices:
-            - "/dev/ttyUSB0:/dev/ttyUSB0"
-        volumes:
-            - ./software:/software
-            - /media/usb:/media/usb
-
-
-
-        command: ["python", "software/play.py"]
+      build:
+        context: .
+        dockerfile: Dockerfile
+      restart: always
+      privileged: true
+      volumes:
+        - ./software:/software
+        - /media/usb:/media/usb
+      
+      command: ["python", "software/pwm.py"]
