--- a/software/frontend/Dockerfile
+++ b/software/frontend/Dockerfile
@@ -1,21 +1,17 @@
 FROM  balenalib/rpi-raspbian:latest
 
-WORKDIR /normalizer
+WORKDIR /frontend
 COPY . .
 
 RUN [ "cross-build-start" ]
 RUN install_packages \
     build-essential \
     python3 \
-    python3-pip \
-    python3-numpy \
-    libatlas3-base \
-    ffmpeg
-
+    python3-pip
+    
 RUN pip3 install --no-cache-dir -r requirements.txt
 RUN [ "cross-build-end" ]
 
 
-ENV UDEV=1
 
-#CMD python3 ./normalizer.py
+#CMD python3 ./conductor.py
