--- a/software/frontend/Dockerfile
+++ b/software/frontend/Dockerfile
@@ -1,6 +1,8 @@
+#FROM balenalib/raspberrypi4-64-alpine-python:3-latest
 FROM  balenalib/rpi-raspbian:latest
 
-WORKDIR /frontend
+# Setup
+WORKDIR /app
 COPY . .
 
 RUN [ "cross-build-start" ]
@@ -9,9 +11,9 @@ RUN install_packages \
     python3 \
     python3-pip
     
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install -r requirements.txt
 RUN [ "cross-build-end" ]
 
+# App
 
-
-#CMD python3 ./conductor.py
+#CMD python3 server.py
