--- a/software/music_vault/Dockerfile
+++ b/software/music_vault/Dockerfile
@@ -1,7 +1,9 @@
+#FROM balenalib/raspberrypi4-64-alpine-python:3-latest
 FROM  balenalib/rpi-raspbian:latest
 
-WORKDIR /normalizer
-COPY . .
+# Setup
+WORKDIR /app
+COPY requirements.txt .
 
 RUN [ "cross-build-start" ]
 RUN install_packages \
@@ -12,10 +14,14 @@ RUN install_packages \
     libatlas3-base \
     ffmpeg
 
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install -r requirements.txt
 RUN [ "cross-build-end" ]
 
 
+# App
+COPY normalizer.py .
+COPY ./music /music
+
 ENV UDEV=1
 
-#CMD python3 ./normalizer.py
+#CMD python3 normalizer.py
