--- a/software/docker-compose.yaml
+++ b/software/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '2'
 
 volumes:
   train-config: {}
-  normalized_music: {}
+  music: {}
 
 
 services:
@@ -13,6 +13,7 @@ services:
     container_name: rtc_module
     privileged: true
     labels:
+      #io.balena.update.strategy: download-then-kill
       io.balena.features.kernel-modules: '1'
       io.balena.features.firmware: '1'
       io.balena.features.dbus: '1'
@@ -20,34 +21,41 @@ services:
       io.balena.features.procfs: '1'
     restart: 'no'
 
+
   conductor:
     build: ./conductor
     container_name: conductor
     privileged: true
     volumes:
       - train-config:/config:ro
-      - normalized_music:/music_vault
+      - music:/music
     labels:
+      #io.balena.update.strategy: download-then-kill
       io.balena.features.supervisor-api: '1'
       io.balena.features.balena-api: '1'
     depends_on:
       - rtc
     restart: unless-stopped
 
+
   frontend:
     build: ./frontend
     container_name: frontend
-    restart: unless-stopped
     depends_on:
       - conductor
+    #labels:
+      #io.balena.update.strategy: download-then-kill
+    restart: unless-stopped
 
-  normalizer:
-    build: ./sound_normalizer
-    container_name: normalizer
+
+  music_vault:
+    build: ./music_vault
+    container_name: music_vault
     privileged: true
     volumes:
-      - normalized_music:/music_vault
+      - music:/music
     labels:
+      #io.balena.update.strategy: download-then-kill
       io.balena.features.supervisor-api: '1'
       io.balena.features.balena-api: '1'
     restart: 'no'
