--- a/software/Dockerfile.conductor
+++ b/software/Dockerfile.conductor
@@ -4,8 +4,13 @@ ENV UDEV=1
 
 WORKDIR /app
 COPY . .
-#COPY ../../go.mod .
-#COPY ../../go.sum .
+
+#COPY pkg .
+#COPY vendor .
+#COPY go.mod .
+#COPY go.sum .
+#COPY src/conductor .
+
 
 RUN [ "cross-build-start" ]
 RUN install_packages \
@@ -15,13 +20,11 @@ RUN install_packages \
     golang \
     omxplayer
 
-#RUN go mod download
+RUN go mod tidy
+RUN go mod download
 #RUN go test
-RUN go build
+RUN go build ./src/conductor
 
 RUN [ "cross-build-end" ]
 
-COPY ./music /music
-
-
-CMD ./music_vault
+CMD ./conductor
