--- a/go-software/Dockerfile.conductor
+++ b/go-software/Dockerfile.conductor
@@ -19,6 +19,8 @@ RUN [ "cross-build-start" ]
 
 # System dependencies
 RUN apt update && apt upgrade -y
+RUN apt autoremove -y
+
 RUN install_packages \
     omxplayer
 
