--- a/go-software/Dockerfile.vault
+++ b/go-software/Dockerfile.vault
@@ -19,6 +19,7 @@ RUN [ "cross-build-start" ]
 
 # System dependencies
 RUN apt update && apt upgrade -y
+RUN apt autoremove -y
 
 
 # Application build
