--- a/python-software/Dockerfile.rtc
+++ b/python-software/Dockerfile.rtc
@@ -5,8 +5,7 @@ RUN [ "cross-build-start" ]
 #RUN apt-get update && apt-get upgrade -y
 RUN [ "cross-build-end" ]
 
-
-CMD /bin/bash -c "echo ds1307 0x68 | tee /sys/class/i2c-adapter/i2c-1/new_device && sleep infinity"
+CMD modprobe i2c-dev && /bin/bash -c "echo ds1307 0x68 | tee /sys/class/i2c-adapter/i2c-1/new_device && sleep infinity"
 
 
 # https://www.balena.io/docs/reference/OS/time/
