working gpio and audio tests

--- a/python-software/Dockerfile.conductor
+++ b/python-software/Dockerfile.conductor
@@ -1,33 +1,55 @@
-FROM  balenalib/rpi-raspbian:latest
+## Bulding stage for dependencies ##
+FROM balenalib/raspberry-pi-python:3.7-build as build
 
+WORKDIR /tmp
+
+# Install dependencies
+COPY requirements.txt requirements.txt
+RUN [ "cross-build-start" ]
+#RUN apt-get update && apt-get upgrade -y
+RUN install_packages \
+    libatlas-base-dev \
+    python3-numpy \
+    ffmpeg \
+    omxplayer
+RUN pip3 install --upgrade pip
+RUN pip3 install -r requirements.txt
+#RUN apt-get autoremove -y
+RUN [ "cross-build-end" ]
+## ##
+
+
+
+
+## Building stage for prepairing music vault ##
+FROM build as music-normalizer
 
 WORKDIR /app
 
-
-# Copy data
 COPY music /music
-COPY requirements.txt requirements.txt
+COPY music_vault.py music_vault.py
+COPY utils.py utils.py
+COPY normalizer.py normalizer.py
+
+#RUN /usr/bin/python3 /app/normalizer.py
+## ##
+
+
+
+
+## Bulding stage for application ##
+FROM build 
+#balenalib/raspberry-pi:latest
+
+ENV INITSYSTEM on
+ENV CONTAINER docker
+
+WORKDIR /app
+
+COPY --from=music-normalizer /music /music
 COPY music_vault.py music_vault.py
 COPY utils.py utils.py
 COPY conductor.py conductor.py
 
-
-# Install dependencies
-RUN [ "cross-build-start" ]
-RUN apt-get update && apt-get upgrade -y
-RUN install_packages \
-    libatlas-base-dev \
-    python3 \
-    python3-pip \
-    python3-numpy \
-    ffmpeg \
-    omxplayer
-RUN apt-get autoremove -y
-
-RUN pip3 install --upgrade pip
-RUN pip3 install -r requirements.txt
-RUN [ "cross-build-end" ]
-
-
-# Run application
-CMD python3 conductor.py
+CMD python conductor.py
+## ##
