--- a/python-software/Dockerfile.rtc
+++ b/python-software/Dockerfile.rtc
@@ -1,9 +1,9 @@
 #FROM  balenalib/rpi-raspbian:latest
 FROM balenalib/raspberrypi4-64-alpine:latest
 
-RUN [ "cross-build-start" ]
+#RUN [ "cross-build-start" ]
 #RUN apt-get update && apt-get upgrade -y
-RUN [ "cross-build-end" ]
+#RUN [ "cross-build-end" ]
 
 CMD modprobe i2c-dev && /bin/bash -c "echo ds1307 0x68 | tee /sys/class/i2c-adapter/i2c-1/new_device && sleep infinity"
 
