--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,13 @@ volumes:
 
 
 services:
-#  hwclock:
-#    build: 
-#      context: .
-#      dockerfile: ./Dockerfile.rtc
-#    container_name: hwclock
-#    privileged: true
-#    restart: 'no'
+  hwclock:
+    build: 
+      context: .
+      dockerfile: ./Dockerfile.rtc
+    container_name: hwclock
+    privileged: true
+    restart: 'no'
 
   conductor:
     build: 
@@ -24,6 +24,6 @@ services:
     volumes:
       - config:/config:ro
       - music:/music
-#    depends_on:
-#      - hwclock
+    depends_on:
+      - hwclock
     restart: unless-stopped
