--- a/Dockerfile.rtc
+++ b/Dockerfile.rtc
@@ -1,11 +1,12 @@
 #FROM  balenalib/rpi-raspbian:latest
-FROM balenalib/raspberrypi4-64-alpine:latest
+FROM balenalib/raspberrypi4-64-alpine:run
 
 #RUN [ "cross-build-start" ]
 #RUN apt-get update && apt-get upgrade -y
 #RUN [ "cross-build-end" ]
 
-CMD modprobe i2c-dev && /bin/bash -c "echo ds1307 0x68 | tee /sys/class/i2c-adapter/i2c-1/new_device && sleep infinity"
+CMD /bin/bash -c "echo ds1307 0x68 | tee /sys/class/i2c-adapter/i2c-1/new_device && sleep infinity"
+#modprobe i2c-dev &&
 
 
 # https://www.balena.io/docs/reference/OS/time/
