--- a/Dockerfile.conductor
+++ b/Dockerfile.conductor
@@ -5,28 +5,32 @@ WORKDIR /tmp
 COPY src/conductor/requirements.txt requirements.txt
 RUN [ "cross-build-start" ]
 RUN install_packages libatlas-base-dev python3-numpy ffmpeg omxplayer
-RUN pip3 install --upgrade pip
+#RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
 RUN [ "cross-build-end" ]
 
 
 
 FROM build AS audio-stage
+# https://github.com/slhck/ffmpeg-normalize
 
-COPY audio/sounds /music
-COPY audio/music /music
+# copy files if audio was normalized prior to build
+COPY audio/normalized /music/normalized
 
-RUN [ "cross-build-start" ]
-RUN pip3 install ffmpeg-normalize
-RUN ffmpeg-normalize -vf /music/*.mp3
-RUN [ "cross-build-end" ]
 
+#WORKDIR /music
+#COPY audio/sounds .
+#COPY audio/music .
+#RUN [ "cross-build-start" ]
+#RUN pip3 install ffmpeg-normalize
+#RUN ffmpeg-normalize -fp -pr --audio-codec libmp3lame -ext mp3 *.mp3 --output-folder normalized
+#RUN [ "cross-build-end" ]
 
 
 
 FROM build AS app-stage
 
-COPY --from=audio-stage /music /music
+COPY --from=audio-stage /music/normalized /music
 
 WORKDIR /app
 COPY src/conductor/ .
